--- a/Queue/Queue/Views/Account/Delete.cshtml
+++ b/Queue/Queue/Views/Account/Delete.cshtml
@@ -4,8 +4,10 @@
 }
 
 <h2>Delete</h2>
-
+@using (Html.BeginForm())
+{ 
 <form>
     <h2>Вы уверены, что хотите удалить свой аккаунт?</h2>
-    <button type="submit">Да</button>
+    <button type="submit" value="Delete">Delete</button>
 </form>
+}
