--- a/Queue/Queue/Views/Manage/Index.cshtml
+++ b/Queue/Queue/Views/Manage/Index.cshtml
@@ -5,8 +5,6 @@
 
 <h1>E-mail : @Html.Name(Model.Email)</h1>
 
-<h1>User-name : @Html.Name(Model.UserName)</h1>
-
 <h2>Ваша роль : @Html.Name(Model.Role)</h2>
 
 <h2>Ваше имя : @Html.Name(Model.Name)</h2>
@@ -17,11 +15,27 @@
 
 <div class="form-group">
     <div class="col-md-2 control-label">
-        @Html.ActionLink("Edit", "Edit", "Account")
+        @Html.ActionLink("Edit", "Edit", "Manage")
     </div>
     <div class="col-md-2 control-label">
-        @Html.ActionLink("Delete", "Delete", "Account")
+        @Html.ActionLink("Delete", "Delete", "Manage")
     </div>
 </div>
+
+@if(Model.Role == "Expert")
+{
+        <div class="col-md-2 control-label">
+        @Html.ActionLink("Go to Expert panel", "Index", "Expert")
+    </div>
+}
+
+@if (Model.Role == "Admin")
+{
+    <div class="col-md-2 control-label">
+        @Html.ActionLink("Go to Admin panel", "Index", "Admin")
+    </div>
+}
+
+
 <p class="text-success">@ViewBag.StatusMessage</p>
 
