Добавил роли Identity. Настроил фильтры на контроллеры для админа и експерта.

--- a/Queue/Queue/Views/Account/Register.cshtml
+++ b/Queue/Queue/Views/Account/Register.cshtml
@@ -37,6 +37,14 @@
         </div>
 
         <div>
+            Введите роль
+            <div>
+                @Html.EditorFor(model => model.Role)
+            </div>
+        </div>
+
+
+        <div>
             <div>
                 <input type="submit" value="Зарегистрировать" />
             </div>
