--- a/Queue/Queue/Views/Manage/Index.cshtml
+++ b/Queue/Queue/Views/Manage/Index.cshtml
@@ -5,8 +5,6 @@
 
 <h1>E-mail : @Html.Name(Model.Email)</h1>
 
-<h2>Ваша роль : @Html.Name(Model.Role)</h2>
-
 <h2>Ваше имя : @Html.Name(Model.Name)</h2>
 
 <h2>Ваша фамилия : @Html.Name(Model.LastName)</h2>
@@ -21,21 +19,19 @@
         @Html.ActionLink("Delete", "Delete", "Manage")
     </div>
 </div>
-
-@if(Model.Role == "Expert")
+@if (User.IsInRole("Expert"))
 {
         <div class="col-md-2 control-label">
-        @Html.ActionLink("Go to Expert panel", "Index", "Expert")
+        @Html.ActionLink("Expert - panel", "Index", "Expert")
     </div>
 }
 
-@if (Model.Role == "Admin")
+@if (User.IsInRole("Admin"))
 {
     <div class="col-md-2 control-label">
-        @Html.ActionLink("Go to Admin panel", "Index", "Admin")
+        @Html.ActionLink("Admin - panel", "Index", "Admin")
     </div>
 }
-
 
 <p class="text-success">@ViewBag.StatusMessage</p>
 
