--- a/Queue/Queue/Views/Expert/Index.cshtml
+++ b/Queue/Queue/Views/Expert/Index.cshtml
@@ -1,7 +1,31 @@
-﻿
+﻿@model IEnumerable<Queue.Models.QueryView>
 @{
     ViewBag.Title = "Index";
 }
 
 <h2>Expert panel</h2>
+<div class="container" style="background-color:lightblue; display:inline-block">
+    <table class="table" style="width:20%">
+        <tr>
+            <th colspan="4">Доступные запросы:</th>
+        </tr>
+        <tr>
+            <th>Название</th>
+            <th>Подписано экспертов</th>
+            <th>Размер очереди</th>
+            <th>Вне очереди</th>
+            <th></th>
+        </tr>
 
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>@item.NameQuery</td>
+                <td>@item.ExpertsCount</td>
+                <td>@item.QueueCount</td>
+                <td>@item.SubQueueCount</td>
+                <td>@Html.ActionLink("Подписаться", "Handle")</td> @*Если подписан то отписаться*@
+            </tr>
+        }
+    </table>
+</div>
