Страница для клиентов. Встать в очередь. Увидеть окно чата (пока все примитивно и без базы). Чат-комната.

--- a/Queue/Queue/Views/Manage/Index.cshtml
+++ b/Queue/Queue/Views/Manage/Index.cshtml
@@ -32,6 +32,12 @@
         @Html.ActionLink("Admin - panel", "Index", "Admin")
     </div>
 }
+@if (User.IsInRole("Client"))
+{
+    <div class="col-md-2 control-label">
+        @Html.ActionLink("Client - panel", "Index", "Client")
+    </div>
+}
 
 <p class="text-success">@ViewBag.StatusMessage</p>
 
