--- a/Queue/Queue/Views/Admin/Index.cshtml
+++ b/Queue/Queue/Views/Admin/Index.cshtml
@@ -1,36 +1,20 @@
-﻿@model IEnumerable<Queue.Models.QueryView>
-@{
+﻿@{
     ViewBag.Title = "Index";
 }
 
 <h2>Admin panel</h2>
-<div class="container" style="background-color:lightblue; display:inline-block">
-    <table class="table" style="width:20%">
-        <tr>
-            <th colspan="2">@Html.ActionLink("Добавить запрос", "Create")</th>
-            <th colspan="4">Доступные запросы:</th>
-        </tr>
-        <tr>
-            <th>Название</th>
-            <th>Подписано экспертов</th>
-            <th>Размер очереди</th>
-            <th>Вне очереди</th>
-            <th></th>
-        </tr>
 
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>@item.NameQuery</td>
-                <td>@item.ExpertsCount</td>
-                <td>@item.QueueCount</td>
-                <td>@item.SubQueueCount</td>
-                <td>@Html.ActionLink("Удалить запрос", "Delete")</td> 
-            </tr>
+<div class="row">
+    <div class="col-md-5" style="background-color:lightblue;">
+        @{
+            Html.RenderAction("QueryPartial", "Admin");
         }
-    </table>
-</div>
-<div class="container">
-    @PartialViewResult
+    </div>
+    <div class="col-md-2"></div>
+    <div class="col-md-5" style="background-color: lightgreen;">
+        @{
+            Html.RenderAction("ExpertsPartial", "Admin");
+        }
+    </div>
 </div>
 
