--- a/Queue/Queue/Views/Client/QueryPartial.cshtml
+++ b/Queue/Queue/Views/Client/QueryPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<Queue.Models.QueryView>
 
-    <table class="table" style="width:20%">
+    <table class="table" >
         <tr>
             <th colspan="4">Доступные запросы:</th>
         </tr>
