--- a/Queue/Queue/Views/Expert/HandlePartial.cshtml
+++ b/Queue/Queue/Views/Expert/HandlePartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<Queue.Models.QueryView>
 
-<table class="table" style="width:20%">
+<table class="table" >
     <tr>
         <th colspan="4">Ваши запросы:</th>
     </tr>
