--- a/Queue/Queue/Views/Expert/Index.cshtml
+++ b/Queue/Queue/Views/Expert/Index.cshtml
@@ -5,12 +5,13 @@
 
 <h2>Expert panel</h2>
 <div class="row">
-    <div class="col-md-6" style="background-color:lightblue;">
+    <div class="col-md-5" style="background-color:lightblue;">
         @{
             Html.RenderAction("QueryPartial", "Expert");
         }
     </div>
-    <div class="col-md-6" style="background-color: lightgreen;">
+    <div class=" col-md-2"></div>
+    <div class="col-md-5" style="background-color: lightgreen;">
         @{
             Html.RenderAction("HandlePartial", "Expert");
         }
