Пункты b,e,f задания. Начиная отсюда, приложение работает с базой.

--- a/Queue/Queue/Views/Client/QueryPartial.cshtml
+++ b/Queue/Queue/Views/Client/QueryPartial.cshtml
@@ -15,11 +15,11 @@
         @foreach (var item in Model)
         {
             <tr>
-                <td>@item.NameQuery</td>
-                <td>@item.ExpertsCount</td>
+                <td>@item.Name</td>
+                <td>@item.Experts</td>
                 <td>@item.QueueCount</td>
                 <td>@item.SubQueueCount</td>
-                <td>@Html.ActionLink("Подписаться", "Handle", "Expert", new { QID = item.ID }, null)</td>
+                <td>@Html.ActionLink("Подать запрос", "EnterQueue", "Client", new { QID = item.ID }, null)</td>
             </tr>
         }
     </table>
