--- a/Queue/Queue/Views/Client/QueueInfo.cshtml
+++ b/Queue/Queue/Views/Client/QueueInfo.cshtml
@@ -4,4 +4,5 @@
 <p>Позиция в очереди @Model.Position</p>
 <p>Время ожидания @Model.WaitingTime минут</p>
 <p>Ожидайте ответа оператора!</p>
+<p>@Html.ActionLink("Покинуть очередь", "LeaveQueue", "Client")</p>
 
