--- a/Queue/Queue/Views/Admin/QueryPartial.cshtml
+++ b/Queue/Queue/Views/Admin/QueryPartial.cshtml
@@ -18,8 +18,8 @@
     @foreach (var item in Model)
     {
         <tr>
-            <td>@item.NameQuery</td>
-            <td>@item.ExpertsCount</td>
+            <td>@item.Name</td>
+            <td>@item.Experts</td>
             <td>@item.QueueCount</td>
             <td>@item.SubQueueCount</td>
             <td>
