--- a/Queue/Queue/Views/Admin/ExpertsPartial.cshtml
+++ b/Queue/Queue/Views/Admin/ExpertsPartial.cshtml
@@ -6,7 +6,6 @@
     </tr>
     <tr>
         <th>Имя</th>
-        <th>В сети</th>
         <th>Статус</th>        
         <th>Запросы</th>
     </tr>
@@ -15,14 +14,6 @@
     {
         <tr>
             <td>@item.Name</td>
-                @if (@item.IsAuthorize)
-                {
-                  <td>В сети</td>
-                }
-                else
-                {
-                    <td>Не в сети</td>
-                }
             @if (@item.IsWorking)
             {
                 <td>Работает</td>
@@ -34,7 +25,7 @@
             <td>
                 @for (int i = 0; i < @item.ProcessingQuery.Count; i++ )
                 {
-                    <p>@item.ProcessingQuery[i].NameQuery</p>
+                    <p>@item.ProcessingQuery[i].Name</p>
                 }
             </td>
         </tr>
