--- a/Queue/Queue/Views/Home/Index.cshtml
+++ b/Queue/Queue/Views/Home/Index.cshtml
@@ -5,5 +5,5 @@
 <div class="jumbotron">
     <h1>Электронная очередь</h1>
     <p class="lead">Описание проекта</p>
-    
+    Регистрация для экспертов -> @Html.ActionLink("Регистрация", "RegisterExpert", "Account")
 </div>
