--- a/Queue/Queue/Views/Home/Index.cshtml
+++ b/Queue/Queue/Views/Home/Index.cshtml
@@ -1,9 +1,55 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Домашняя страница";
 }
 
 <div class="jumbotron">
     <h1>Электронная очередь</h1>
     <p class="lead">Описание проекта</p>
-    Регистрация для экспертов -> @Html.ActionLink("Регистрация", "RegisterExpert", "Account")
+    <p>Данный проект представляет собой электронную очередь. Приложение состоит из трех частей, для клиентов, экспертов и администратора.</p>
+    <p>Регистрация для клиентов доступна по ссылке, вверху экрана, ссылка для регистрации экспертов приведена ниже, а администратор может быть только один и он уже зарегистрирован (см. ниже).</p>
+    <p>После авторизации вы автоматически попадете на свою рабочую страницу. Она доступна по ссылке "Личный кабинет" вверху экрана. При нажатии на соседнюю кнопку с именем текущего пользователя, вы попадете в меню управлением аккаунтом, где сможете указать свое имя и фамилию, либо удалить аккаунт (Администратора нельзя удалить)</p>
+    <p>Подробнее о каждой из сторон приложения смотрите ниже.</p>
+        Регистрация для экспертов -> @Html.ActionLink("Регистрация", "RegisterExpert", "Account")
+</div>
+<div class="row">
+    <div class="col-md-3" style="background-color:lightslategrey">
+        <h3>Клиент</h3>
+        <p>Логин: Client@gmail.com</p>
+        <p>Пароль: qwe123</p>
+        <ul>
+            <li>Доступен список всех запросов</li>
+            <li>Может подписаться на любой (один)</li>
+            <li>Может досрочно выйти из очереди</li>
+        </ul>
+    </div>
+    <div class="col-md-1"></div>
+    <div class="col-md-4" style="background-color:lightslategrey">
+        <h3>Эксперт</h3>
+        <p>Логин: Expert@gmail.com</p>
+        <p>Пароль: qwe123</p>
+        <ul>
+            <li>Доступен список всех запросов</li>
+            <li>Может подписаться (или отписаться) на любой запрос</li>
+            <li>Принимает одного клиента</li>
+            <li>Может просто закончить прием</li>
+            <li>Может отправить клиента в другую очередь "вне очереди"</li>
+        </ul>
+    </div>
+    <div class="col-md-1"></div>
+    <div class="col-md-3" style="background-color:lightslategrey">
+        <h3>Админ</h3>
+        <p>Логин: Admin@gmail.com</p>
+        <p>Пароль: qwe123</p>
+        <ul>
+            <li>Доступен список всех запросов</li>
+            <li>Может добавлять и удалять запросы</li>
+            <li>Видит список всех экспертов и кто чем занят</li>
+        </ul>
+    </div>
+</div>
+<div class="row">
+
+    <div class=" jumbotron text-right col-md-12">
+        <h6>Содержимое личного кабинета обновляется раз в 5 секунд</h6>
+    </div>
 </div>
