--- a/Queue/Queue/Views/Manage/Edit.cshtml
+++ b/Queue/Queue/Views/Manage/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Queue.Models.EditModel
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Аккаунт";
 }
 
 <h2>Редактировать данные профиля</h2>
