--- a/Queue/Queue/Views/Shared/Service.cshtml
+++ b/Queue/Queue/Views/Shared/Service.cshtml
@@ -1,13 +1,12 @@
 ﻿@model Queue.Models.ClientView
 
-<div>@Model.ID_client</div>
-<div>@Model.ID_expert</div>
-
-@if(User.IsInRole("Expert"))
+@if (User.IsInRole("Expert"))
 {
-    Html.RenderAction("SubQueryPartial", "Expert");        
-    
-    <div class="col-md-2">
-        @Html.ActionLink("Закончить разговор", "EndDialog", "Expert", new { EID = Model.ID_expert, UID = Model.ID_client }, null)
+    <p>Отправить вне очереди</p>
+    Html.RenderAction("SubQueryPartial", "Expert");
+    <div class="row">
+        <div class="col-md-12 text-center">
+            @Html.ActionLink("Закончить разговор", "EndDialog", "Expert", new { EID = Model.ID_expert, UID = Model.ID_client }, null)
+        </div>
     </div>
 }
