--- a/Queue/Queue/Views/Account/Login.cshtml
+++ b/Queue/Queue/Views/Account/Login.cshtml
@@ -1,9 +1,9 @@
 ﻿@model Queue.Models.LoginModel
 @{
-    ViewBag.Title = "Login";
+    ViewBag.Title = "Вход";
 }
 
-<h2>Login</h2>
+<h2>Вход</h2>
 
 @using (Html.BeginForm())
 {
