--- a/Queue/Queue/Views/Admin/Index.cshtml
+++ b/Queue/Queue/Views/Admin/Index.cshtml
@@ -2,7 +2,8 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Admin panel</h2>
+<meta http-equiv="Refresh" content="30" />
+<h2>Администратор</h2>
 
 <div class="row">
     <div class="col-md-6" style="background-color:lightblue;">
