--- a/Queue/Queue/Views/Expert/Index.cshtml
+++ b/Queue/Queue/Views/Expert/Index.cshtml
@@ -1,9 +1,11 @@
 ﻿@model IEnumerable<Queue.Models.QueryView>
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Эксперт";
 }
 
-<h2>Expert panel</h2>
+<meta http-equiv="Refresh" content="5" />
+
+<h2>Эксперт</h2>
 <div class="row">
     <div class="col-md-5" style="background-color:lightblue;">
         @{
