--- a/Queue/Queue/Views/Manage/Index.cshtml
+++ b/Queue/Queue/Views/Manage/Index.cshtml
@@ -19,9 +19,12 @@
     <div class="col-md-6 text-center">
         <div>@Html.ActionLink("Редактировать", "Edit", "Manage")</div>
     </div>
-    <div class="col-md-6 text-center">
+    @if(!User.IsInRole("Admin"))
+    {
+        <div class="col-md-6 text-center">
         <div>@Html.ActionLink("Удалить", "Delete", "Manage")</div>
     </div>
+    }
 </div>
 <p class="text-success">@ViewBag.StatusMessage</p>
 
